--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "node": "18"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.24.5",
     "dayjs": "^1.11.10",
+    "flatpickr": "^4.6.13",
     "nanoid": "^5.0.7"
   }
 }
